--- a/style.css
+++ b/style.css
@@ -8,6 +8,17 @@
     box-sizing: border-box;
 }
 
+body {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+
+
 a {
     color: black;
 }
@@ -66,6 +77,7 @@ i {
     cursor: pointer;
 
 }
+
 .box-front, .box-back {
     position: absolute;
     -webkit-backface-visibility: hidden;
@@ -77,6 +89,7 @@ i {
     transition: transform 0.8s;
     transform-style: preserve-3d;
 }
+
 .box-back {
     transform: rotateY(180deg);
 }
@@ -89,7 +102,8 @@ i {
     font-size: 32px;
     transform: rotate(135deg)
 }
-.box.x{
+
+.box.x {
     box-shadow: none;
     background-color: transparent;
 }
